--- a/CleanArchitecture/clean_architecture/pubspec.yaml
+++ b/CleanArchitecture/clean_architecture/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   json_annotation: 3.1.1
   http: ^0.12.2
+  bloc: ^6.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
